Fixed descripting text overlaping by making it disapear after todoItemList is more that 7

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,14 @@ h1 {
 }
 
 .todoListSelectorContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
 }
 .todoListSelector {
   border-radius: 20px;
-  width: fit-content;
-  padding: 20px;
+  width: 100px;
+  padding: 15px;
 }
 #todoItemsContainer {
   justify-items: left;
